# code-challenge-2024-lord2anil

./: .gitignore  SOLUTION.md  output.txt  run.sh  test.py  valid.txt
mempool2/: p2wpkh1.json  ttt2.json
rustBlock/: Cargo.toml
rustBlock/src/: assemble_block.rs  coinbase_transaction.rs  main.rs  mine_block.rs  transacton_struct.rs  validate_transactions.rs
rustblock/: Cargo.toml
rustblock/src/: assemble_block.rs  coinbase_transaction.rs  main.rs  mine_block.rs  transacton_struct.rs  utiles.rs  validate_transactions.rs  validations_utiles.rs
rustblock/src/validation_scripts/: mod.rs  p2pkh.rs  p2wpkh.rs
