[package]
name = "rustblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
byteorder = "1.5.0"
crypto = "0.5.1"
derivative = "2.2.0"
hex = "0.4.3"
num = "0.4.2"
ripemd = "0.1.3"
rust-crypto = "0.2.36"
secp256k1 =  "0.29.0" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"

